http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.1.1
Date: 
----------------------------------

Bug Fixes:

CAY-2670 CommitLog does not include FKs for deleted objects with one-way relationships
CAY-2679 Unstable ordering of relationships in the .map.xml file

----------------------------------
Release: 4.1
Date: July 14, 2020
----------------------------------

Bug Fixes:

CAY-2642 EhCache memory leak due to misconfiguration
CAY-2643 ObjectSelect.prefetch(name, semantics) method creates a phantom node
CAY-2646 Wrong target path selection logic in cgen config
CAY-2647 Modeler: project upgrade from 4.0.B2 to 4.1.RC2 failure
CAY-2653 No methods for queries with qualifier parameters generated
CAY-2654 Exception in dbimport when relationships should be imported, but no explicit configuration exists

----------------------------------
Release: 4.1.RC2
Date: October 25, 2019
----------------------------------

Bug Fixes:

CAY-2627 Modeler: ObjRelationship creation dialog ignores delete rule
CAY-2628 dbimport: unable to add several relationships to existing entity
CAY-2631 Can no longer use "byte[]" as root of scalar SQLSelect
CAY-2632 Modeler: issue saving cgen path for maven project
CAY-2633 Modeler: attribute sorting logic in cgen can corrupt model
CAY-2634 Minor inconsistencies in Modeler "DB Import"
CAY-2635 Lambda expressions break ROP serialization

----------------------------------
Release: 4.1.RC1
Date: October 3, 2019
----------------------------------

Changes/New Features:
CAY-2592 Modeler: make all datamaps selected in global cgen tab
CAY-2593 Add tableTypes field to dbImport config in dataMap
CAY-2611 Exclude system catalogs and schemas when run dbImport without config

Bug Fixes:

CAY-2417 Modeler: wrong title in attribute context menu
CAY-2553 Wrong disjoint prefetch query qualifier